added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,15 @@ language: generic
 
 script:
   - docker run -e CI=true mercierv/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-814223718335"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
